Fixed back arrow z-index

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -114,6 +114,7 @@ input[type="submit"] {
   position: absolute;
   top: 24px;
   left: 5vw;
+  z-index: 5;
 }
 
 .radio-buttons {
